// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data layer integration tests Test examRequiresAccessToken Should get exam access token 1`] = `
Object {
  "exam_access_token": "Z173480948902JK34432",
  "exam_access_token_expiration": "60",
}
`;

exports[`Data layer integration tests Test getExamAttemptsData Should get, and save exam and attempt 1`] = `
Object {
  "specialExams": Object {
    "activeAttempt": Object {
      "attempt_code": "",
      "attempt_id": 1,
      "attempt_status": "started",
      "course_id": "course-v1:test+special+exam",
      "desktop_application_js_url": "",
      "exam_display_name": "a timed exam",
      "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
      "exam_type": "timed",
      "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
      "in_timed_exam": true,
      "software_download_url": "",
      "taking_as_proctored": false,
      "time_remaining_seconds": 1799.9,
      "timer_ends": Any<String>,
      "total_time": "30 minutes",
    },
    "allowProctoringOptOut": false,
    "apiErrorMsg": "",
    "exam": Object {
      "attempt": Object {
        "attempt_code": "",
        "attempt_id": 1,
        "attempt_status": "started",
        "course_id": "course-v1:test+special+exam",
        "desktop_application_js_url": "",
        "exam_display_name": "a timed exam",
        "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
        "exam_type": "timed",
        "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
        "in_timed_exam": true,
        "software_download_url": "",
        "taking_as_proctored": false,
        "time_remaining_seconds": 1799.9,
        "total_time": "30 minutes",
      },
      "backend": "test",
      "content_id": "block-v1:test+special+exam+type@sequential+block@abc123",
      "course_id": "course-v1:test+special+exam",
      "due_date": null,
      "exam_name": "prock exam",
      "external_id": null,
      "hide_after_due": false,
      "id": 1,
      "is_active": true,
      "is_practice_exam": false,
      "is_proctored": false,
      "prerequisite_status": Object {
        "are_prerequisites_satisifed": true,
        "declined_prerequisites": Array [],
        "failed_prerequisites": Array [],
        "pending_prerequisites": Array [],
        "satisfied_prerequisites": Array [],
      },
      "time_limit_mins": 30,
      "total_time": "30 minutes",
      "type": "timed",
    },
    "examAccessToken": Object {
      "exam_access_token": "",
      "exam_access_token_expiration": "",
    },
    "isLoading": false,
    "proctoringSettings": Object {
      "exam_proctoring_backend": Object {
        "download_url": "",
        "instructions": Array [],
        "name": "",
        "rules": Object {},
      },
      "integration_specific_email": "",
      "learner_notification_from_email": "",
      "provider_name": "",
      "provider_tech_support_email": "",
      "provider_tech_support_phone": "",
      "provider_tech_support_url": "",
    },
    "timeIsOver": false,
  },
}
`;

exports[`Data layer integration tests Test getLatestAttemptData with edx-proctoring as a backend (no EXAMS_BASE_URL) Should get, and save latest attempt 1`] = `
Object {
  "specialExams": Object {
    "activeAttempt": Object {
      "attempt_code": "",
      "attempt_id": 1,
      "attempt_status": "started",
      "course_id": "course-v1:test+special+exam",
      "desktop_application_js_url": "",
      "exam_display_name": "a timed exam",
      "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
      "exam_type": "timed",
      "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
      "in_timed_exam": true,
      "software_download_url": "",
      "taking_as_proctored": false,
      "time_remaining_seconds": 1799.9,
      "timer_ends": Any<String>,
      "total_time": "30 minutes",
    },
    "allowProctoringOptOut": false,
    "apiErrorMsg": "",
    "exam": Object {},
    "examAccessToken": Object {
      "exam_access_token": "",
      "exam_access_token_expiration": "",
    },
    "isLoading": false,
    "proctoringSettings": Object {
      "exam_proctoring_backend": Object {
        "download_url": "",
        "instructions": Array [],
        "name": "",
        "rules": Object {},
      },
      "integration_specific_email": "",
      "learner_notification_from_email": "",
      "provider_name": "",
      "provider_tech_support_email": "",
      "provider_tech_support_phone": "",
      "provider_tech_support_url": "",
    },
    "timeIsOver": false,
  },
}
`;

exports[`Data layer integration tests Test getProctoringSettings Should fail to fetch if error occurs 1`] = `
Object {
  "exam_proctoring_backend": Object {
    "download_url": "",
    "instructions": Array [],
    "name": "",
    "rules": Object {},
  },
  "integration_specific_email": "",
  "learner_notification_from_email": "",
  "provider_name": "",
  "provider_tech_support_email": "",
  "provider_tech_support_phone": "",
  "provider_tech_support_url": "",
}
`;

exports[`Data layer integration tests Test getProctoringSettings Should get, and save proctoringSettings 1`] = `
Object {
  "exam_proctoring_backend": Object {
    "download_url": "",
    "instructions": Array [],
    "name": "",
    "rules": Object {},
  },
  "integration_specific_email": "",
  "learner_notification_from_email": "",
  "provider_name": "",
  "provider_tech_support_email": "",
  "provider_tech_support_phone": "",
}
`;

exports[`Data layer integration tests Test getProctoringSettings Test legacy URL for getProctoringSettings Should get, and save proctoringSettings 1`] = `
Object {
  "exam_proctoring_backend": Object {
    "download_url": "",
    "instructions": Array [],
    "name": "",
    "rules": Object {},
  },
  "integration_specific_email": "",
  "learner_notification_from_email": "",
  "provider_name": "",
  "provider_tech_support_email": "",
  "provider_tech_support_phone": "",
}
`;

exports[`Data layer integration tests Test pollAttempt Should poll and update active attempt with new proctoring backend 1`] = `
Object {
  "attempt_code": "",
  "attempt_id": 1,
  "attempt_status": "started",
  "course_id": "course-v1:test+special+exam",
  "desktop_application_js_url": "",
  "exam_display_name": "a timed exam",
  "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
  "exam_type": "timed",
  "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
  "in_timed_exam": true,
  "software_download_url": "",
  "taking_as_proctored": false,
  "time_remaining_seconds": 1739.9,
  "timer_ends": Any<String>,
  "total_time": "30 minutes",
}
`;

exports[`Data layer integration tests Test pollAttempt with edx-proctoring as a backend (no EXAMS_BASE_URL) Should poll and update active attempt with legacy proctoring backend 1`] = `
Object {
  "attempt_code": "",
  "attempt_id": 1,
  "attempt_status": "started",
  "course_id": "course-v1:test+special+exam",
  "desktop_application_js_url": "",
  "exam_display_name": "a timed exam",
  "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
  "exam_type": "timed",
  "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
  "in_timed_exam": true,
  "software_download_url": "",
  "taking_as_proctored": false,
  "time_remaining_seconds": 1799.9,
  "total_time": "30 minutes",
}
`;

exports[`Data layer integration tests Test pollAttempt with edx-proctoring as a backend (no EXAMS_BASE_URL) Should poll and update active attempt with legacy proctoring backend 2`] = `
Object {
  "attempt_code": "",
  "attempt_id": 1,
  "attempt_status": "started",
  "course_id": "course-v1:test+special+exam",
  "desktop_application_js_url": "",
  "exam_display_name": "a timed exam",
  "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
  "exam_type": "timed",
  "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
  "in_timed_exam": true,
  "software_download_url": "",
  "taking_as_proctored": false,
  "time_remaining_seconds": 1799.9,
  "total_time": "30 minutes",
}
`;

exports[`Data layer integration tests Test resetExam Should reset exam attempt 1`] = `
Object {
  "specialExams": Object {
    "activeAttempt": null,
    "allowProctoringOptOut": false,
    "apiErrorMsg": "",
    "exam": Object {
      "attempt": Object {
        "attempt_code": "",
        "attempt_id": 2,
        "attempt_status": "created",
        "course_id": "course-v1:test+special+exam",
        "desktop_application_js_url": "",
        "exam_display_name": "a timed exam",
        "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
        "exam_type": "timed",
        "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
        "in_timed_exam": true,
        "software_download_url": "",
        "taking_as_proctored": false,
        "time_remaining_seconds": 1799.9,
        "total_time": "30 minutes",
      },
      "backend": "test",
      "content_id": "block-v1:test+special+exam+type@sequential+block@abc123",
      "course_id": "course-v1:test+special+exam",
      "due_date": null,
      "exam_name": "prock exam",
      "external_id": null,
      "hide_after_due": false,
      "id": 1,
      "is_active": true,
      "is_practice_exam": false,
      "is_proctored": false,
      "prerequisite_status": Object {
        "are_prerequisites_satisifed": true,
        "declined_prerequisites": Array [],
        "failed_prerequisites": Array [],
        "pending_prerequisites": Array [],
        "satisfied_prerequisites": Array [],
      },
      "time_limit_mins": 30,
      "total_time": "30 minutes",
      "type": "timed",
    },
    "examAccessToken": Object {
      "exam_access_token": "",
      "exam_access_token_expiration": "",
    },
    "isLoading": false,
    "proctoringSettings": Object {
      "exam_proctoring_backend": Object {
        "download_url": "",
        "instructions": Array [],
        "name": "",
        "rules": Object {},
      },
      "integration_specific_email": "",
      "learner_notification_from_email": "",
      "provider_name": "",
      "provider_tech_support_email": "",
      "provider_tech_support_phone": "",
      "provider_tech_support_url": "",
    },
    "timeIsOver": false,
  },
}
`;

exports[`Data layer integration tests Test resetExam with edx-proctoring as backend (no EXAMS_BASE_URL) Should reset exam attempt 1`] = `
Object {
  "specialExams": Object {
    "activeAttempt": null,
    "allowProctoringOptOut": false,
    "apiErrorMsg": "",
    "exam": Object {
      "attempt": Object {
        "attempt_code": "",
        "attempt_id": 2,
        "attempt_status": "created",
        "course_id": "course-v1:test+special+exam",
        "desktop_application_js_url": "",
        "exam_display_name": "a timed exam",
        "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
        "exam_type": "timed",
        "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
        "in_timed_exam": true,
        "software_download_url": "",
        "taking_as_proctored": false,
        "time_remaining_seconds": 1799.9,
        "total_time": "30 minutes",
      },
      "backend": "test",
      "content_id": "block-v1:test+special+exam+type@sequential+block@abc123",
      "course_id": "course-v1:test+special+exam",
      "due_date": null,
      "exam_name": "prock exam",
      "external_id": null,
      "hide_after_due": false,
      "id": 1,
      "is_active": true,
      "is_practice_exam": false,
      "is_proctored": false,
      "prerequisite_status": Object {
        "are_prerequisites_satisifed": true,
        "declined_prerequisites": Array [],
        "failed_prerequisites": Array [],
        "pending_prerequisites": Array [],
        "satisfied_prerequisites": Array [],
      },
      "time_limit_mins": 30,
      "total_time": "30 minutes",
      "type": "timed",
    },
    "examAccessToken": Object {
      "exam_access_token": "",
      "exam_access_token_expiration": "",
    },
    "isLoading": false,
    "proctoringSettings": Object {
      "exam_proctoring_backend": Object {
        "download_url": "",
        "instructions": Array [],
        "name": "",
        "rules": Object {},
      },
      "integration_specific_email": "",
      "learner_notification_from_email": "",
      "provider_name": "",
      "provider_tech_support_email": "",
      "provider_tech_support_phone": "",
      "provider_tech_support_url": "",
    },
    "timeIsOver": false,
  },
}
`;

exports[`Data layer integration tests Test startProctoredExam Should start exam, and update attempt and exam 1`] = `
Object {
  "attempt_code": "",
  "attempt_id": 1,
  "attempt_status": "started",
  "course_id": "course-v1:test+special+exam",
  "desktop_application_js_url": "",
  "exam_display_name": "a timed exam",
  "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
  "exam_type": "timed",
  "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
  "in_timed_exam": true,
  "software_download_url": "",
  "taking_as_proctored": false,
  "time_remaining_seconds": 1799.9,
  "timer_ends": Any<String>,
  "total_time": "30 minutes",
}
`;

exports[`Data layer integration tests Test startProctoredExam with edx-proctoring as a backend (no EXAMS_BASE_URL) Should start exam, and update attempt and exam 1`] = `
Object {
  "attempt_code": "",
  "attempt_id": 1,
  "attempt_status": "started",
  "course_id": "course-v1:test+special+exam",
  "desktop_application_js_url": "",
  "exam_display_name": "a timed exam",
  "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
  "exam_type": "timed",
  "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
  "in_timed_exam": true,
  "software_download_url": "",
  "taking_as_proctored": false,
  "time_remaining_seconds": 1799.9,
  "timer_ends": Any<String>,
  "total_time": "30 minutes",
}
`;

exports[`Data layer integration tests Test startTimedExam Should create and start exam 1`] = `
Object {
  "attempt_code": "",
  "attempt_id": 1,
  "attempt_status": "started",
  "course_id": "course-v1:test+special+exam",
  "desktop_application_js_url": "",
  "exam_display_name": "a timed exam",
  "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
  "exam_type": "timed",
  "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
  "in_timed_exam": true,
  "software_download_url": "",
  "taking_as_proctored": false,
  "time_remaining_seconds": 1799.9,
  "timer_ends": Any<String>,
  "total_time": "30 minutes",
}
`;

exports[`Data layer integration tests Test startTimedExam with edx-proctoring as a backend (no EXAMS_BASE_URL) Should create and start exam 1`] = `
Object {
  "attempt_code": "",
  "attempt_id": 1,
  "attempt_status": "started",
  "course_id": "course-v1:test+special+exam",
  "desktop_application_js_url": "",
  "exam_display_name": "a timed exam",
  "exam_started_poll_url": "/api/edx_proctoring/v1/proctored_exam/attempt/1",
  "exam_type": "timed",
  "exam_url_path": "http://localhost:2000/course/course-v1:test+special+exam/block-v1:test+special+exam+type@sequential+block@abc123",
  "in_timed_exam": true,
  "software_download_url": "",
  "taking_as_proctored": false,
  "time_remaining_seconds": 1799.9,
  "timer_ends": Any<String>,
  "total_time": "30 minutes",
}
`;
